# pdf_to_vector_db

./: .gitignore  README.md  colpali_embeddings_generator.ipynb  colpali_image_query.py  create_embeddings.py  create_embeddings_and_query.py  create_embeddings_reduced_dimensionality.py  flatten_json.py  hybrid_embeddings.ipynb  newREADME  parallel_qdrant.py  pass_to_colpali.py  pdf_to_image.py  process_pdfs.py  pyproject.toml  qdrant.py  query.py  query_colpali_embeddings.py  query_qdrant.ipynb  query_qdrant.py  requirements.txt  store_embeddings.py  test.py
qdrant/: qdrant_api.py
qdrant_storage/: meta.json
qdrant_storage/collection/pdf_embeddings/: storage.sqlite
text/: text_query_pdf.py
text_impl/: process_pdfs.py
utils/: config.py  extract_metadata.py  pdf_to_image.py
vlm_impl/: pdf_to_image.py  store_embeddings.py
